preprocess population data

--- a/population.ipynb
+++ b/population.ipynb
@@ -11,8 +11,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 인구데이터 전처리\n",
+    "- 행정동에 대한 인구데이터 있음\n",
+    "- 행정동->법정동 변환 규칙 데이터 있음\n",
+    "- 규칙에 따라 행정동에서 법정동 변환 후 같은 법정동끼리 합침"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +118,7 @@
        "2   4227   4173  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,25 +134,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>행정동명</th>\n",
+       "      <th>법정동코드</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>충청남도 계룡시 금암동</td>\n",
+       "      <td>44250101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>충청남도 계룡시 두마면</td>\n",
+       "      <td>44250310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>충청남도 계룡시 신도안면</td>\n",
+       "      <td>44250330</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            행정동명     법정동코드\n",
+       "0   충청남도 계룡시 금암동  44250101\n",
+       "1   충청남도 계룡시 두마면  44250310\n",
+       "2  충청남도 계룡시 신도안면  44250330"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_code = pd.read_excel(\"data/code_var.xlsx\")\n",
-    "df_code = df_code[df_code['시도'] == '충청남도']\n",
-    "df_code = df_code.loc[df_code['행정구역코드'].fillna(3333333).apply(lambda x: len(str(int(x))) > 6)].reset_index(drop=True)\n",
-    "df_code['법정동코드'] = df_code['법정동코드'].apply(lambda x: str(x)[:-2])\n",
-    "df_code['행정동명'] = df_code['시도'] + \" \" + df_code['시군구'] + \" \" + df_code['행정구역명']\n",
-    "df_code = df_code.loc[:, ['행정동명', '법정동코드']]\n",
-    "df_code = df_code.groupby(['행정동명', '법정동코드']).count().reset_index()\n",
+    "# 행정동명->법정동명을 위한 변환데이터 불러오기\n",
+    "admin_code = pd.read_excel(\"data/code_var.xlsx\")\n",
+    "admin_code = admin_code[admin_code['시도'] == '충청남도']\n",
+    "admin_code = admin_code.loc[admin_code['행정구역코드'].fillna(3333333).apply(lambda x: len(str(int(x))) > 6)].reset_index(drop=True)\n",
+    "admin_code['법정동코드'] = admin_code['법정동코드'].apply(lambda x: str(x)[:-2])\n",
+    "# 읍면동 단위로 정제\n",
+    "admin_code['행정동명'] = admin_code['시도'] + \" \" + admin_code['시군구'] + \" \" + admin_code['행정구역명']\n",
+    "admin_code = admin_code.loc[:, ['행정동명', '법정동코드']]\n",
+    "admin_code = admin_code.groupby(['행정동명', '법정동코드']).count().reset_index()\n",
     "# 오천면어항출장소는 신흑동에 포함되는 것으로 처리\n",
-    "df_code.loc[df_code['행정동명'] == '충청남도 보령시 오천면어항출장소', '법정동코드'] = '44180110'\n",
-    "#df_code.to_excel('code1.xlsx')"
+    "admin_code.loc[admin_code['행정동명'] == '충청남도 보령시 오천면어항출장소', '법정동코드'] = '44180110'\n",
+    "print(len(admin_code))\n",
+    "admin_code.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -204,28 +281,28 @@
        "2  44131103  충청남도 천안시 동남구 문화동"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 법정동코드 불러오기\n",
-    "df_law = pd.read_table(\"data/법정동코드 전체자료.txt\", sep='\\t', encoding='cp949')\n",
+    "# 법정동코드 데이터 불러오기\n",
+    "law_code = pd.read_table(\"data/법정동코드 전체자료.txt\", sep='\\t', encoding='cp949')\n",
     "# 읍면동 단위로 정제\n",
-    "chgnam_code = df_law[df_law['법정동코드'].apply(lambda x: str(x).startswith('44'))]\n",
-    "chgnam_code = chgnam_code[chgnam_code['폐지여부'] == '존재']\n",
-    "chgnam_code = chgnam_code[chgnam_code['법정동명'].apply(lambda x: x[-1] in ('읍', '면', '동'))]\n",
-    "chgnam_code.loc[:, '법정동코드'] = chgnam_code.loc[:, '법정동코드'].apply(lambda x: str(x)[:-2])\n",
-    "chgnam_code.reset_index(drop=True, inplace=True)\n",
-    "chgnam_code.drop(columns='폐지여부', inplace=True)\n",
-    "print(len(chgnam_code))\n",
-    "chgnam_code.head(3)"
+    "law_code = law_code[law_code['법정동코드'].apply(lambda x: str(x).startswith('44'))]\n",
+    "law_code = law_code[law_code['폐지여부'] == '존재']\n",
+    "law_code = law_code[law_code['법정동명'].apply(lambda x: x[-1] in ('읍', '면', '동'))]\n",
+    "law_code.loc[:, '법정동코드'] = law_code.loc[:, '법정동코드'].apply(lambda x: str(x)[:-2])\n",
+    "law_code.reset_index(drop=True, inplace=True)\n",
+    "law_code.drop(columns='폐지여부', inplace=True)\n",
+    "print(len(law_code))\n",
+    "law_code.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -284,21 +361,29 @@
        "2  충청남도 계룡시 신도안면  44250330  충청남도 계룡시 신도안면"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_x = pd.merge(df_code, chgnam_code, how='left', on='법정동코드')\n",
-    "df_x.head(3)"
+    "# 행정동명 테이블과 법정동명 테이블 merge해서 변환테이블 생성\n",
+    "trans_code = pd.merge(admin_code, law_code, how='left', on='법정동코드')\n",
+    "trans_code.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -400,21 +485,30 @@
        "2   4227   4173  44131320  충청남도 천안시 동남구 광덕면  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_pop_law = pd.merge(df_pop, df_x, how='left', on='행정동명')\n",
+    "# 변환테이블 기반으로 인구데이터 merge\n",
+    "df_pop_law = pd.merge(df_pop, trans_code, how='left', on='행정동명')\n",
+    "print(len(df_pop_law))\n",
     "df_pop_law.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "209\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -467,19 +561,21 @@
        "2  충청남도 공주시 월송동      7"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 행정동명이 겹치는 인구데이터 개수 확인\n",
     "dup = pd.DataFrame(df_pop_law['행정동명'].value_counts()).reset_index()\n",
+    "print(len(dup))\n",
     "dup.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -587,12 +683,13 @@
        "2   4344.0   4295.0   4227.0   4173.0  44131320  충청남도 천안시 동남구 광덕면     1  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 중복 행정동에 대해 중복 개수로 평균내기\n",
     "df_pop_law['중복개수'] = df_pop_law['행정동명'].apply(lambda x: dup.loc[dup['행정동명'] == x, 'count'].values[0])\n",
     "for i in range(2014, 2024):\n",
     "    df_pop_law[i] = df_pop_law[i] / df_pop_law['중복개수']\n",
@@ -601,16 +698,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 행정동 관련 컬럼 삭제\n",
     "df_pop_law = df_pop_law.drop(columns=['행정동명', '중복개수'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +779,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>충청남도 천안시 동남구 문화동충청남도 천안시 동남구 문화동</td>\n",
+       "      <td>충청남도 천안시 동남구 문화동</td>\n",
        "      <td>44131103</td>\n",
        "      <td>5186.666667</td>\n",
        "      <td>5041.000000</td>\n",
@@ -699,31 +797,78 @@
        "</div>"
       ],
       "text/plain": [
-       "                               법정동명     법정동코드         2014         2015  \\\n",
-       "0                  충청남도 천안시 동남구 대흥동  44131101  1498.500000  1486.750000   \n",
-       "1                  충청남도 천안시 동남구 성황동  44131102  1681.000000  1602.333333   \n",
-       "2  충청남도 천안시 동남구 문화동충청남도 천안시 동남구 문화동  44131103  5186.666667  5041.000000   \n",
+       "               법정동명     법정동코드         2014         2015         2016  \\\n",
+       "0  충청남도 천안시 동남구 대흥동  44131101  1498.500000  1486.750000  1464.500000   \n",
+       "1  충청남도 천안시 동남구 성황동  44131102  1681.000000  1602.333333  1543.000000   \n",
+       "2  충청남도 천안시 동남구 문화동  44131103  5186.666667  5041.000000  4822.333333   \n",
        "\n",
-       "          2016         2017     2018         2019         2020         2021  \\\n",
-       "0  1464.500000  1409.500000  1426.25  1409.000000  1390.750000  1346.500000   \n",
-       "1  1543.000000  1479.333333  1387.00  1305.000000  1226.000000  1435.333333   \n",
-       "2  4822.333333  4631.000000  4472.00  4299.666667  4184.666667  4317.000000   \n",
+       "          2017     2018         2019         2020         2021         2022  \\\n",
+       "0  1409.500000  1426.25  1409.000000  1390.750000  1346.500000  1349.750000   \n",
+       "1  1479.333333  1387.00  1305.000000  1226.000000  1435.333333  2214.666667   \n",
+       "2  4631.000000  4472.00  4299.666667  4184.666667  4317.000000  5059.333333   \n",
        "\n",
-       "          2022         2023  \n",
-       "0  1349.750000  1300.500000  \n",
-       "1  2214.666667  2628.333333  \n",
-       "2  5059.333333  5376.666667  "
+       "          2023  \n",
+       "0  1300.500000  \n",
+       "1  2628.333333  \n",
+       "2  5376.666667  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_pop_law = pd.DataFrame(df_pop_law.groupby('법정동코드').sum()).reset_index()\n",
+    "# 법정동코드가 같은 항목끼리는 인구 합하기\n",
+    "df_pop_law = pd.DataFrame(df_pop_law.groupby(['법정동코드', '법정동명']).sum()).reset_index()\n",
     "df_pop_law = df_pop_law.loc[:, ['법정동명', '법정동코드'] + [i for i in range(2014, 2024)]]\n",
     "df_pop_law.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 285 entries, 0 to 284\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   법정동명    285 non-null    object \n",
+      " 1   법정동코드   285 non-null    object \n",
+      " 2   2014    285 non-null    float64\n",
+      " 3   2015    285 non-null    float64\n",
+      " 4   2016    285 non-null    float64\n",
+      " 5   2017    285 non-null    float64\n",
+      " 6   2018    285 non-null    float64\n",
+      " 7   2019    285 non-null    float64\n",
+      " 8   2020    285 non-null    float64\n",
+      " 9   2021    285 non-null    float64\n",
+      " 10  2022    285 non-null    float64\n",
+      " 11  2023    285 non-null    float64\n",
+      "dtypes: float64(10), object(2)\n",
+      "memory usage: 26.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결측치 및 개수 확인\n",
+    "df_pop_law.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전처리 데이터 저장\n",
+    "df_pop_law.to_csv('data/pop_pp.csv', index=False)"
    ]
   }
  ],
