comparison with real 2024 rescue data

--- a/4_population_preprocess.ipynb
+++ b/4_population_preprocess.ipynb
@@ -375,6 +375,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 행정동->법정동 변환 테이블 저장\n",
+    "trans_code.to_csv('data/trans_code.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
