--- a/9_apply.ipynb
+++ b/9_apply.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "2  44131103  충청남도 천안시 동남구 문화동"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "293   NaN   충청남도 천안시 서북구 다가동   1.0"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,26 +333,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 법정동명에 공백이 포함되거나 오타가 있는 경우 법정동코드에 결측치가 생김\n",
     "# 개수가 적으므로 하나씩 직접 수정\n",
-    "df_rescue.loc[285, '법정동명'] = df_rescue.loc[285, '법정동명'].rstrip()\n",
-    "df_rescue.loc[286, '법정동명'] = df_rescue.loc[286, '법정동명'].rstrip()\n",
-    "df_rescue.loc[287, '법정동명'] = df_rescue.loc[287, '법정동명'].rstrip()\n",
+    "df_rescue.loc[285, '법정동명'] = '충청남도 금산군 금산읍'\n",
+    "df_rescue.loc[286, '법정동명'] = '충청남도 논산시 양촌면'\n",
+    "df_rescue.loc[287, '법정동명'] = '충청남도 논산시 연무읍'\n",
     "df_rescue.loc[288, '법정동명'] = '충청남도 논산시 연무읍'\n",
     "df_rescue.loc[289, '법정동명'] = '충청남도 부여군 규암면'\n",
     "df_rescue.loc[290, '법정동명'] = '충청남도 서천군 한산면'\n",
-    "df_rescue.loc[291, '법정동명'] = df_rescue.loc[291, '법정동명'].rstrip()\n",
-    "df_rescue.loc[292, '법정동명'] = df_rescue.loc[292, '법정동명'].rstrip()\n",
-    "df_rescue.loc[293, '법정동명'] = '충청남도 천안시 동남구 다가동'"
+    "df_rescue.loc[291, '법정동명'] = '충청남도 천안시 동남구 목천읍'\n",
+    "df_rescue.loc[292, '법정동명'] = '충청남도 천안시 동남구 신부동'\n",
+    "df_rescue.loc[293, '법정동명'] = '충청남도 천안시 동남구 다가동'\n",
+    "df_rescue.loc[285, '법정동코드'] = '44710250'\n",
+    "df_rescue.loc[286, '법정동코드'] = '44230390'\n",
+    "df_rescue.loc[287, '법정동코드'] = '44230253'\n",
+    "df_rescue.loc[288, '법정동코드'] = '44230253'\n",
+    "df_rescue.loc[289, '법정동코드'] = '44760310'\n",
+    "df_rescue.loc[290, '법정동코드'] = '44770340'\n",
+    "df_rescue.loc[291, '법정동코드'] = '44131250'\n",
+    "df_rescue.loc[292, '법정동코드'] = '44131118'\n",
+    "df_rescue.loc[293, '법정동코드'] = '44131114'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +475,7 @@
        "4  44230110   충청남도 논산시 강산동     0.096039      0    0"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +583,7 @@
        "4  44131105  충청남도 천안시 동남구 영성동  1.0     0.179828      0    0"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,16 +596,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "전체 출동횟수: 970\n",
-      "초록부분에 걸치는 출동횟수: 337\n",
-      "비율: 0.3474226804123711\n"
+      "전체 출동횟수: 990\n",
+      "초록부분에 걸치는 출동횟수: 349\n",
+      "비율: 0.3525252525252525\n"
      ]
     }
    ],
@@ -610,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -641,6 +650,7 @@
        "      <th>DEATH</th>\n",
        "      <th>DAM</th>\n",
        "      <th>시군구</th>\n",
+       "      <th>CORRECT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -653,6 +663,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>천안시 동남구</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -663,6 +674,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>천안시 동남구</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -673,6 +685,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>천안시 동남구</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -683,6 +696,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>천안시 동남구</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -693,21 +707,22 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>천안시 동남구</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     EMD_CD        EMD_KOR_NM  RES  RESCUE_PROB  DEATH  DAM      시군구\n",
-       "0  44131101  충청남도 천안시 동남구 대흥동  1.0     0.176888      0    0  천안시 동남구\n",
-       "1  44131102  충청남도 천안시 동남구 성황동  0.0     0.118649      0    0  천안시 동남구\n",
-       "2  44131103  충청남도 천안시 동남구 문화동  0.0     0.510843      0    0  천안시 동남구\n",
-       "3  44131104  충청남도 천안시 동남구 사직동  0.0     0.403644      0    0  천안시 동남구\n",
-       "4  44131105  충청남도 천안시 동남구 영성동  1.0     0.179828      0    0  천안시 동남구"
+       "     EMD_CD        EMD_KOR_NM  RES  RESCUE_PROB  DEATH  DAM      시군구  CORRECT\n",
+       "0  44131101  충청남도 천안시 동남구 대흥동  1.0     0.176888      0    0  천안시 동남구        0\n",
+       "1  44131102  충청남도 천안시 동남구 성황동  0.0     0.118649      0    0  천안시 동남구        0\n",
+       "2  44131103  충청남도 천안시 동남구 문화동  0.0     0.510843      0    0  천안시 동남구        0\n",
+       "3  44131104  충청남도 천안시 동남구 사직동  0.0     0.403644      0    0  천안시 동남구        0\n",
+       "4  44131105  충청남도 천안시 동남구 영성동  1.0     0.179828      0    0  천안시 동남구        0"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,22 +732,214 @@
     "df_final['시군구'] = df_final['EMD_KOR_NM'].apply(\n",
     "    lambda x: x.split()[1] + \" \" + x.split()[2] if len(x.split()) == 4 else x.split()[1]\n",
     ")\n",
+    "df_final['CORRECT'] = 0\n",
     "\n",
     "df_final.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>시군구</th>\n",
+       "      <th>전체 주소 개수</th>\n",
+       "      <th>맞은 주소 개수</th>\n",
+       "      <th>예측 적중률</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>계룡시</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>공주시</td>\n",
+       "      <td>37</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.243243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>금산군</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>논산시</td>\n",
+       "      <td>24</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.458333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>당진시</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.090909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>보령시</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.095238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>부여군</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.562500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>서산시</td>\n",
+       "      <td>24</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.125000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>서천군</td>\n",
+       "      <td>13</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.538462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>아산시</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>예산군</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>천안시 동남구</td>\n",
+       "      <td>28</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>천안시 서북구</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>청양군</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>태안군</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>홍성군</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.090909</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        시군구  전체 주소 개수  맞은 주소 개수    예측 적중률\n",
+       "0       계룡시         4         3  0.750000\n",
+       "1       공주시        37         9  0.243243\n",
+       "2       금산군        10         5  0.500000\n",
+       "3       논산시        24        11  0.458333\n",
+       "4       당진시        22         2  0.090909\n",
+       "5       보령시        21         2  0.095238\n",
+       "6       부여군        16         9  0.562500\n",
+       "7       서산시        24         3  0.125000\n",
+       "8       서천군        13         7  0.538462\n",
+       "9       아산시        30         2  0.066667\n",
+       "10      예산군        12         0  0.000000\n",
+       "11  천안시 동남구        28         4  0.142857\n",
+       "12  천안시 서북구        15         0  0.000000\n",
+       "13      청양군        10         3  0.300000\n",
+       "14      태안군         8         0  0.000000\n",
+       "15      홍성군        11         1  0.090909"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 시군구별 출동 적중률\n",
+    "for i in range(len(df_final)):\n",
+    "    if df_final.loc[i, 'RES'] > 0 and df_final.loc[i, 'RESCUE_PROB'] >= 0.20:\n",
+    "        df_final.loc[i, 'CORRECT'] = 1\n",
+    "\n",
+    "df_correct = df_final.loc[:, ['시군구', 'CORRECT']].groupby('시군구').count().reset_index()\n",
+    "df_sum = df_final.loc[:, ['시군구', 'CORRECT']].groupby('시군구').sum().reset_index()\n",
+    "df_sido_correct = pd.merge(df_correct, df_sum, on='시군구', how='inner')\n",
+    "df_sido_correct.rename(columns={\n",
+    "    'CORRECT_x': '전체 주소 개수',\n",
+    "    'CORRECT_y': '맞은 주소 개수'\n",
+    "}, inplace=True)\n",
+    "df_sido_correct['예측 적중률'] = (df_sido_correct['맞은 주소 개수'] / df_sido_correct['전체 주소 개수'])\n",
+    "df_sido_correct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "전체 출동횟수: 970\n",
-      "시군구별 상위 3지역에 걸치는 출동횟수: 184\n",
-      "비율: 0.18969072164948453\n"
+      "전체 출동횟수: 990\n",
+      "시군구별 상위 3지역에 걸치는 출동횟수: 193\n",
+      "비율: 0.19494949494949496\n"
      ]
     }
    ],
@@ -752,16 +959,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "전체 출동횟수: 970\n",
-      "시군구별 상위 4지역에 걸치는 출동횟수: 251\n",
-      "비율: 0.25876288659793817\n"
+      "전체 출동횟수: 990\n",
+      "시군구별 상위 4지역에 걸치는 출동횟수: 260\n",
+      "비율: 0.26262626262626265\n"
      ]
     }
    ],
